protocols/tests/identities/identity_d1/expects/slicing_invalid.interp.slicing_invalid.expect
error: Invalid slice operation: msb (15) is smaller than lsb (31)
   ┌─ protocols/tests/identities/identity_d1/slicing_invalid.prot:11:13
   │
11 │   assert_eq(s[15:31], DUT.s[15:31]); // illegal slices! (should be `s[31:15]`)
   │             ^^^^^^^^ Invalid slice operation: msb (15) is smaller than lsb (31)

---CODE---
1
